fixed the registation form's password

--- a/RegistrationForm/index.html
+++ b/RegistrationForm/index.html
@@ -13,7 +13,7 @@
             <label>Enter Your First Name: <input type="text" name="firstName" required/></label>
             <label>Enter Your Last Name: <input type="text" name="lastName" required/></label>
             <label>Enter your email address: <input type="email" name="email" required/></label>
-            <label>Create a New Password: <input type="password" name="password" required/></label>
+            <label>Create a New Password: <input type="password" patten="[a-z0-5]{8,}" name="password" required/></label>
         </fieldset>
         <fieldset>
             <label><input type="radio" name="accountType" class="inline"/> Personal Account</label>
